Add index API test